Buttons set to 3em height to fix safari alignment issues

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,12 +78,16 @@ html {
 
     //styling on buttons
     .button {
+      height: 3em;
       border: 3px solid transparent;
       border-radius: 10px;
-      padding: 18px;
-      &.enforce-center {
-        flex-direction: column;
-      }
+      padding-left: 18px;
+      padding-right: 18px;
+      // &.enforce-center {
+      //   display: flex;
+      //   flex-direction: column;
+      //   justify-content: center;
+      // }
 
       &.is-warning {
         background-color: $feature-yellow;
